--- a/Alessandra.html
+++ b/Alessandra.html
@@ -30,8 +30,12 @@
          padding: 0
          }
          body {
-         background-color: #F08080;
+         /*background-color: #F08080;*/
+         background-image: url("background.jpg");
          font-family: 'Montserrat', sans-serif;
+         width: auto;
+         height: auto;
+         background-size: cover;
          }
          .card {
          width: 350px;
