--- a/about-me.html
+++ b/about-me.html
@@ -39,7 +39,7 @@
          }
          .card {
          width: 350px;
-         background-color: #efefef;
+         background-color: #c9f4ff00;
          border: none;
          cursor: pointer;
          transition: all 0.5s;
@@ -90,7 +90,7 @@
          background-color: rgb(255, 255, 255);
          color: #000000;
          font-size: 15px;
-         border-radius: 1px
+         border-radius: 13px
          }
          .text span {
          font-size: 13px;
@@ -108,7 +108,7 @@
          font-weight: bold
          }
          .date {
-         background-color: #ccc;
+         background-color: #7cb9cb59;
          text-align: center
          }
 
@@ -135,6 +135,9 @@
                   <br>• Certificada pelo método TR3 - Terapias de Readaptação e Reorganização Respiratórias e Terapias Respiratórias Completas, pelo Instituto Alessandra Dorça.
                   
                   <br>• Certificada no tratamento de Disfunções cervico-crânio-mandibulares e cirurgias ortognáticas por Marcelo Tenreiro.</span>
+               </div>
+               <div class=" image d-flex flex-column justify-content-center align-items-center">
+               <div class=" d-flex mt-2"> <a href="Alessandra2.html"><button class="btn1 btn-dark">Voltar <span><i class="fa fa-undo"></i></span></button> </a></div>
                </div>
                <div class=" px-2 rounded mt-4 date "> <span class="join">Rua Guarda Marinha Greenwald, 3244 <br> Bairro Zona Nova Tramandaí - RS <br> (51) 985748882</span> </div>
             </div>
