--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
    <head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width, initial-scale=1'>
-      <title>Snippet - BBBootstrap</title>
+      <title>Alessandra F. Soares</title>
       <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet'>
       <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
       <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+
       <style>::-webkit-scrollbar {
          width: 8px;
          }
@@ -26,14 +30,21 @@
          padding: 0
          }
          body {
-         background-color: #000
+         /*background-color: #F08080;*/
+         background-image: url("background2.jpeg");
+         font-family: 'Montserrat', sans-serif;
+         width: auto;
+         height: auto;
+         /*background-size: cover;*/
          }
          .card {
          width: 350px;
-         background-color: #efefef;
+         background-color: #c9f4ff00;
          border: none;
          cursor: pointer;
          transition: all 0.5s;
+         border-style: solid;
+         border-color: #fff;
          }
          .image img {
          transition: all 0.5s;
@@ -41,12 +52,17 @@
          transform: scale(1.5)
          }
          .card:hover .image img {
-         transform: scale(1.5)
+         transform: scale(1.5);
+         border-color: #a4f2fe;
+         background-color: #a4f2fe;
          }
          .btn {
-         height: 140px;
-         width: 140px;
-         border-radius: 50%
+         height: 180px;
+         width: 180px;
+         border-radius: 50%;
+         background-color: #a4f2fe;
+         border-color: #a4f2fe;
+         background-image: url(back.svg);
          }
          .name {
          font-size: 22px;
@@ -55,7 +71,7 @@
          }
          .idd {
          font-size: 14px;
-         font-weight: 600
+         font-weight: 700
          }
          .idd1 {
          font-size: 12px
@@ -71,12 +87,12 @@
          }
          .btn1 {
          height: 40px;
-         width: 150px;
+         width: 200px;
          border: none;
-         background-color: #000;
-         color: #aeaeae;
+         background-color: rgb(255, 255, 255);
+         color: #000000;
          font-size: 15px;
-         border-radius: 8px
+         border-radius: 13px
          }
          .text span {
          font-size: 13px;
@@ -91,11 +107,11 @@
          }
          .join {
          font-size: 14px;
-         color: #a0a0a0;
          font-weight: bold
          }
          .date {
-         background-color: #ccc
+         background-color: #7cb9cb59;
+         text-align: center
          }
       </style>
    </head>
@@ -103,15 +119,16 @@
       <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
          <div class="card p-4">
             <div class=" image d-flex flex-column justify-content-center align-items-center">
-               <button class="btn btn-secondary"> <img src="https://media.istockphoto.com/vectors/default-placeholder-woman-vector-id844000348?s=612x612" height="100" width="100" /></button> <span class="name mt-3">Alessandra</span> <span class="idd">@xxxxxx</span> 
+               <button class="btn"> <img src="profile1.jpeg" height="100" width="100" /></button> <span class="name mt-3">Dra. Alessandra F. Soares</span> 
+               <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="text">FISIOTERAPEUTA</span> </div><span class="idd">CREFITO 5 - 300.112 F</span> 
                <div class="d-flex flex-row justify-content-center align-items-center gap-2"> </div>
-               <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="follow">Um pouco sobre mim</span> </div>
-               <div class="text mt-3"> <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel lectus a nibh mollis pulvinar. Ut molestie, neque et fermentum mollis, dolor lacus facilisis augue, vel convallis nisl diam vel tellus..</span> </div>
-               <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Whatsapp <span><i class="fa fa-whatsapp"></i></span></button> </div>
-               <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Facebook <span><i class="fa fa-facebook-f"></i></span></button> </div>
-               <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Instagram <span><i class="fa fa-instagram"></i></span></button> </div>
-               <div class=" d-flex mt-2"> <button class="btn1 btn-dark">Uber <span><i class="fa fa-car"></i></span></button> </div>
-               <div class=" px-2 rounded mt-4 date "> <span class="join">xxxxxxx</span> </div>
+               <div class="text mt-3"> <span></span></div>
+               <div class=" d-flex rounded mt-2"> <a href="about-me.html"><button class="btn1 btn-dark" href="#" role="button">Um pouco sobre mim <span><i class="fa fa-user-md"></i></span></button> </a> </div>
+               <div class=" d-flex mt-2"> <a href="https://wa.me/5551985748882?text=Ol%C3%A1%21"><button class="btn1 btn-dark">Whatsapp <span><i class="fa fa-whatsapp"></i></span></button></a> </div>
+               <div class=" d-flex mt-2"> <a href="https://goo.gl/maps/zsjNDXWjxCHpjDcG6"><button class="btn1 btn-dark">Como ir <span><i class="fa fa-map-marker"></i></span></button></a> </div>
+               <div class=" d-flex mt-2"> <a href="https://www.instagram.com/neuroativafisioterapia/"><button class="btn1 btn-dark">Instagram <span><i class="fa fa-instagram"></i></span></button></a> </div>
+               <div class=" d-flex mt-2"> <a href="https://m.uber.com/looking?drop%5B0%5D=%7B%22latitude%22%3A-30.0025781%2C%22longitude%22%3A-50.1398871%2C%22addressLine1%22%3A%22R.%20Guarda%20M.nha%20Greenwald%2C%203244%22%2C%22addressLine2%22%3A%22Tramanda%C3%AD%2C%20RS%2C%20Brasil%22%2C%22id%22%3A%22ChIJ60uyVipzGJURKeq1P0qKpI8%22%2C%22provider%22%3A%22google_places%22%7D"><button class="btn1 btn-dark">Uber <span><i class="fa fa-car"></i></span></button> </a></div>
+               <div class=" px-2 rounded mt-4 date "> <span class="join">Rua Guarda Marinha Greenwald, 3244 <br> Bairro Zona Nova Tramandaí - RS <br> (51) 985748882</span> </div>
             </div>
          </div>
       </div>
