--- a/about-me.html
+++ b/about-me.html
@@ -31,11 +31,11 @@
          }
          body {
          /*background-color: #F08080;*/
-         background-image: url("background2.jpeg");
+         background-image: url("background3.jpeg");
          font-family: 'Montserrat', sans-serif;
          width: auto;
          height: auto;
-         background-size: cover;
+         /*background-size: cover;*/
          }
          .card {
          width: 350px;
@@ -58,8 +58,8 @@
          height: 180px;
          width: 180px;
          border-radius: 50%;
-         background-color: #a4f2fe;
-         border-color: #a4f2fe;
+         background-color: #ffffff94;
+         border-color: #efeee8;
          background-image: url(back.svg);
          }
          .name {
@@ -140,7 +140,6 @@ Conte comigo se precisar!</span>
                <div class=" image d-flex flex-column justify-content-center align-items-center">
                <div class=" d-flex mt-2"> <a href="index.html"><button class="btn1 btn-dark">Voltar <span><i class="fa fa-undo"></i></span></button> </a></div>
                </div>
-               <div class=" px-2 rounded mt-4 date "> <span class="join">Rua Guarda Marinha Greenwald, 3244 <br> Bairro Zona Nova Tramandaí - RS <br> (51) 985748882</span> </div>
             </div>
          </div>
       </div>
