--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
          }
          body {
          /*background-color: #F08080;*/
-         background-image: url("background2.jpeg");
+         background-image: url("background3.jpeg");
+         background-position: center;
          font-family: 'Montserrat', sans-serif;
          width: auto;
          height: auto;
@@ -60,8 +61,8 @@
          height: 180px;
          width: 180px;
          border-radius: 50%;
-         background-color: #a4f2fe;
-         border-color: #a4f2fe;
+         background-color: #ffffff94;
+         border-color: #efeee8;
          background-image: url(back.svg);
          }
          .name {
@@ -89,7 +90,7 @@
          height: 40px;
          width: 200px;
          border: none;
-         background-color: rgb(255, 255, 255);
+         background-color:#ffffff94;
          color: #000000;
          font-size: 15px;
          border-radius: 13px
@@ -110,7 +111,7 @@
          font-weight: bold
          }
          .date {
-         background-color: #7cb9cb59;
+         background-color:#cdbca496;
          text-align: center
          }
       </style>
@@ -124,9 +125,9 @@
                <div class="d-flex flex-row justify-content-center align-items-center gap-2"> </div>
                <div class="text mt-3"> <span></span></div>
                <div class=" d-flex rounded mt-2"> <a href="about-me.html"><button class="btn1 btn-dark" href="#" role="button">Um pouco sobre mim <span><i class="fa fa-user-md"></i></span></button> </a> </div>
+               <div class=" d-flex mt-2"> <a href="https://www.instagram.com/neuroativafisioterapia/"><button class="btn1 btn-dark">Instagram <span><i class="fa fa-instagram"></i></span></button></a> </div>
                <div class=" d-flex mt-2"> <a href="https://wa.me/5551985748882?text=Ol%C3%A1%21"><button class="btn1 btn-dark">Whatsapp <span><i class="fa fa-whatsapp"></i></span></button></a> </div>
                <div class=" d-flex mt-2"> <a href="https://goo.gl/maps/zsjNDXWjxCHpjDcG6"><button class="btn1 btn-dark">Como ir <span><i class="fa fa-map-marker"></i></span></button></a> </div>
-               <div class=" d-flex mt-2"> <a href="https://www.instagram.com/neuroativafisioterapia/"><button class="btn1 btn-dark">Instagram <span><i class="fa fa-instagram"></i></span></button></a> </div>
                <div class=" d-flex mt-2"> <a href="https://m.uber.com/looking?drop%5B0%5D=%7B%22latitude%22%3A-30.0025781%2C%22longitude%22%3A-50.1398871%2C%22addressLine1%22%3A%22R.%20Guarda%20M.nha%20Greenwald%2C%203244%22%2C%22addressLine2%22%3A%22Tramanda%C3%AD%2C%20RS%2C%20Brasil%22%2C%22id%22%3A%22ChIJ60uyVipzGJURKeq1P0qKpI8%22%2C%22provider%22%3A%22google_places%22%7D"><button class="btn1 btn-dark">Uber <span><i class="fa fa-car"></i></span></button> </a></div>
                <div class=" px-2 rounded mt-4 date "> <span class="join">Rua Guarda Marinha Greenwald, 3244 <br> Bairro Zona Nova Tramandaí - RS <br> (51) 985748882</span> </div>
             </div>
