--- a/about-me.html
+++ b/about-me.html
@@ -87,7 +87,7 @@
          height: 40px;
          width: 200px;
          border: none;
-         background-color: rgb(255, 255, 255);
+         background-color:#ffffff94;
          color: #000000;
          font-size: 15px;
          border-radius: 13px
