--- a/about-me.html
+++ b/about-me.html
@@ -132,7 +132,7 @@
                   <br>• Certificação pelo método TR3 - Terapias de Readaptação e Reorganização Respiratórias 
                   <br>• Certificação no tratamento de Disfunções cervico-crânio - mandibulares e cirurgias ortognáticas.<br>
 
-                  <br>Atuo na área da fisioterapia neurofuncional, cardiorrespiratória. 
+                  <br>Atuo na área da fisioterapia neurofuncional, cardiorrespiratória, 
 nas disfunções cervico-mandibulares e no tratamento de feridas e queimaduras.
  
 Conte comigo se precisar!</span>
