--- a/about-me.html
+++ b/about-me.html
@@ -87,7 +87,7 @@
          height: 40px;
          width: 200px;
          border: none;
-         background-color:#ffffff94;
+         background-color: rgb(255, 255, 255);
          color: #000000;
          font-size: 15px;
          border-radius: 13px
@@ -132,7 +132,7 @@
                   <br>• Certificação pelo método TR3 - Terapias de Readaptação e Reorganização Respiratórias 
                   <br>• Certificação no tratamento de Disfunções cervico-crânio - mandibulares e cirurgias ortognáticas.<br>
 
-                  <br>Atuo na área da fisioterapia neurofuncional, cardiorrespiratória, 
+                  <br>Atuo na área da fisioterapia neurofuncional, cardiorrespiratória. 
 nas disfunções cervico-mandibulares e no tratamento de feridas e queimaduras.
  
 Conte comigo se precisar!</span>
