--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="text">FISIOTERAPEUTA</span> </div><span class="idd">CREFITO 5 - 300.112 F</span> 
                <div class="d-flex flex-row justify-content-center align-items-center gap-2"> </div>
                <div class="text mt-3"> <span></span></div>
-               <div class=" d-flex rounded mt-2"> <a href="about-me.html"><button class="btn1 btn-dark" href="#" role="button">Um pouco sobre mim <span><i class="fa fa-user-md"></i></span></button> </a> </div>
+               <div class=" d-flex rounded mt-2"> <a href="about-me.html"><button class="btn1 btn-dark" href="#" role="button">Perfil Profissional <span><i class="fa fa-user-md"></i></span></button> </a> </div>
                <div class=" d-flex mt-2"> <a href="https://www.instagram.com/neuroativafisioterapia/"><button class="btn1 btn-dark">Instagram Clínica <span><i class="fa fa-instagram"></i></span></button></a> </div>
                <div class=" d-flex mt-2"> <a href="https://www.instagram.com/fisioalesfsoares/"><button class="btn1 btn-dark">Instagram Pessoal <span><i class="fa fa-instagram fa fa-female"></i></span></button></a> </div>
                <div class=" d-flex mt-2"> <a href="https://wa.me/5551985748882?text=Ol%C3%A1%21"><button class="btn1 btn-dark">Whatsapp <span><i class="fa fa-whatsapp"></i></span></button></a> </div>
