--- a/about-me.html
+++ b/about-me.html
@@ -126,7 +126,7 @@
                <div class="d-flex flex-row justify-content-center align-items-center gap-2"> </div>
                <div class="text mt-3"> <span></span></div>
                <span class="about" style="text-align:left">
-                  Olá! Sou Alessandra Fernandes Soares fisioterapeuta e sócia-proprietária da clínica NeuroAtiva. Possuo:<br>
+                  Olá! Sou Alessandra Fernandes Soares fisioterapeuta e sócia-proprietária da clínica NeuroAtiva. A fim de oferecer um atendimento de excelência, possuo:<br>
                   <br>• Pós graduação em Fisioterapia Cardiorrespiratória e Terapia Intensiva pela UFRGS.
                   <br>• Certificação pelo método RTA - Reequilíbrio Toracoabdominal.
                   <br>• Certificação pelo método TR3 - Terapias de Readaptação e Reorganização Respiratórias 
