--- a/about-me.html
+++ b/about-me.html
@@ -127,9 +127,9 @@
                <div class="text mt-3"> <span></span></div>
                <span class="about" style="text-align:left">
                   Olá! Sou Alessandra Fernandes Soares fisioterapeuta e sócia-proprietária da clínica NeuroAtiva. A fim de oferecer um atendimento de excelência, possuo:<br>
-                  <br>• Pós graduação em Fisioterapia Cardiorrespiratória e Terapia Intensiva pela UFRGS.
-                  <br>• Certificação pelo método RTA - Reequilíbrio Toracoabdominal.
-                  <br>• Certificação pelo método TR3 - Terapias de Readaptação e Reorganização Respiratórias 
+                  <br>• Pós graduação em Fisioterapia Cardiorrespiratória e Terapia Intensiva pela UFRGS.<br>
+                  <br>• Certificação pelo método RTA - Reequilíbrio Toracoabdominal.<br>
+                  <br>• Certificação pelo método TR3 - Terapias de Readaptação e Reorganização Respiratórias<br> 
                   <br>• Certificação no tratamento de Disfunções cervico-crânio - mandibulares e cirurgias ortognáticas.<br>
 
                   <br>Atuo na área da fisioterapia neurofuncional, cardiorrespiratória, 
